--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "heroku-postbuild": "YARN_CONFIG_PRODUCTION=false yarn add --prefix ../frontend && yarn run build --prefix ../frontend"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm add --prefix ../frontend && npm run build --prefix ../frontend"
   },
   "license": "MIT",
   "dependencies": {
