--- a/package.json
+++ b/package.json
@@ -1,22 +1,8 @@
 {
-  "name": "backend",
+  "name": "Bleet-Project",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm add --prefix frontend && npm run build --prefix frontend"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "helmet": "^4.6.0",
-    "mongo": "^0.1.0",
-    "mongoose": "^5.13.3",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.12",
-    "path": "^0.12.7",
-    "socket.io": "^4.1.3"
-  }
+  "repository": "https://github.com/sephson/Bleet-Project.git",
+  "author": "sephson <disutj@gmail.com>",
+  "license": "MIT"
 }
