--- a/config.env
+++ b/config.env
@@ -1,3 +1,4 @@
 
 MONGO_URI=mongodb+srv://Disu:mRwU37UE7xGhWy8@bleet.oomoy.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 NODE_ENV=production
+INLINE_RUNTIME_CHUNK=false
