--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URI=mongodb+srv://Disu:mRwU37UE7xGhWy8@bleet.oomoy.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+SOCKETPORT=8900
