--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-REACT_APP_PUBLIC_FOLDER=https://bleet-project.herokuapp.com/assets/person
+REACT_APP_PUBLIC_FOLDER=https://bleet-project.herokuapp.com/assets/
