--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "mongo": "^0.1.0",
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "socket.io": "^4.1.3"
