--- a/backend/config.env
+++ b/backend/config.env
@@ -1,2 +1,5 @@
 
 MONGO_URI=mongodb+srv://Disu:mRwU37UE7xGhWy8@bleet.oomoy.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+CLOUDINARY_NAME=dpe16viap
+CLOUDINARY_API_KEY=583787272986826 
+CLOUDINARY_API_SECRET=wuj5oTYJCc2Qgdtov8lMYIkEoP4
